[Vertical Tabs] Minor improvements to existing tests
Bug: 509226293
Change-Id: Idec60d952cbcc094c20f2e67f2beddbb92eed06a
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/8237612
Auto-Submit: Gazal Agarwal <agazal@google.com>
Commit-Queue: Gazal Agarwal <agazal@google.com>
Reviewed-by: Hao Dong <spdonghao@google.com>
Cr-Commit-Position: refs/heads/main@{#1678404}